--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -42,8 +42,9 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 # ===================== JWT Security Configuration =====================
-jwt.secret=z6NcAZXi9+HYC6ByT+uG+73PdgAHQomW0s7EnpAY+Ns=
-jwt.accessToken.expiration=604800000
-jwt.refreshToken.expiration=604800000
+jwt.secret=${JWT_SECRET:z6NcAZXi9+HYC6ByT+uG+73PdgAHQomW0s7EnpAY+Ns=}
+jwt.accessToken.expiration=${JWT_ACCESS_TOKEN_EXPIRATION:604800000}
+jwt.refreshToken.expiration=${JWT_REFRESH_TOKEN_EXPIRATION:604800000}
+
 
 
