--- a/cart-service/src/main/resources/application.properties
+++ b/cart-service/src/main/resources/application.properties
@@ -32,6 +32,17 @@ eureka.instance.hostname=cart-service
 logging.level.org.springframework.web=DEBUG
 logging.level.com.musicstore=INFO
 
+# -----------------------------------
+# MySQL Configuration for Outbox
+# -----------------------------------
+spring.datasource.url=jdbc:mysql://mysql:3306/cart_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
 # Kafka Configuration
 spring.kafka.bootstrap-servers=kafka:9092
 spring.kafka.producer.retries=3
