--- a/Inventory-Service/src/main/resources/application.properties
+++ b/Inventory-Service/src/main/resources/application.properties
@@ -42,9 +42,9 @@ spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.Strin
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
 spring.kafka.consumer.properties.spring.json.type.mapping=ValidateInventoryEvent:vn.com.iuh.fit.inventory_service.event.ValidateInventoryEvent
-
-
-
-# Topic names
-kafka.topic.inventory-validation-events=inventory-validation-events
+# ===============================
+# Kafka Listener DLQ Configuration
+# ===============================
+spring.kafka.listener.ack-mode=record
+spring.kafka.consumer.properties.spring.json.use.type.headers=false
 
