--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -24,6 +24,11 @@ spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.enable-auto-commit=false
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
 spring.kafka.listener.missing-topics-fatal=false
+# ===============================
+# Kafka Listener DLQ Configuration
+# ===============================
+spring.kafka.listener.ack-mode=record
+spring.kafka.consumer.properties.spring.json.use.type.headers=false
 
 # ===================== Email Configuration (Google SMTP) =====================
 spring.mail.host=smtp.gmail.com
