--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -33,6 +33,13 @@ spring.kafka.producer.buffer-memory=33554432
 spring.kafka.producer.properties.spring.json.trusted.packages=vn.com.iuh.fit.order_service.event
 
 # ===============================
+# Kafka Listener DLQ Configuration (Order-Service)
+# ===============================
+spring.kafka.listener.ack-mode=record
+spring.kafka.consumer.properties.spring.json.use.type.headers=false
+
+
+# ===============================
 # MySQL Database Configuration
 # ===============================
 spring.datasource.url=jdbc:mysql://mysql:3306/order_db?useSSL=false&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true
