--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -164,6 +164,7 @@ services:  # 1. Eureka Service
   mysql:
     container_name: mysql
     image: mysql:8.0
+    platform: linux/amd64
     environment:
       MYSQL_ROOT_PASSWORD: password
     ports:
