--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -62,7 +62,20 @@ spring.cloud.gateway.routes[7].predicates[0]=Path=/api/inventory/**
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
 
+# Actuator endpoints for Prometheus
+management.endpoints.web.exposure.include=health,info,prometheus
 
+# Prometheus metrics
+management.prometheus.metrics.export.enabled=true
+
+# Tracing with OTLP to Tempo
+management.tracing.enabled=true
+management.otlp.tracing.endpoint=http://tempo:4318
+
+# Enable health indicators
+management.endpoint.health.probes.enabled=true
+management.health.livenessstate.enabled=true
+management.health.readinessstate.enabled=true
 
 
 
