--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -46,5 +46,17 @@ jwt.secret=${JWT_SECRET:z6NcAZXi9+HYC6ByT+uG+73PdgAHQomW0s7EnpAY+Ns=}
 jwt.accessToken.expiration=${JWT_ACCESS_TOKEN_EXPIRATION:604800000}
 jwt.refreshToken.expiration=${JWT_REFRESH_TOKEN_EXPIRATION:604800000}
 
+# Actuator endpoints for Prometheus
+management.endpoints.web.exposure.include=health,info,prometheus
+# Prometheus metrics
+management.prometheus.metrics.export.enabled=true
+# Tracing with OTLP to Tempo
+management.tracing.enabled=true
+management.otlp.tracing.endpoint=http://tempo:4318
+# Enable health indicators
+management.endpoint.health.probes.enabled=true
+management.health.livenessstate.enabled=true
+management.health.readinessstate.enabled=true
+
 
 
