--- a/cart-service/src/main/resources/application.properties
+++ b/cart-service/src/main/resources/application.properties
@@ -53,5 +53,17 @@ spring.kafka.producer.value-serializer=org.springframework.kafka.support.seriali
 spring.kafka.producer.properties.max.request.size=5242880
 spring.kafka.producer.properties.compression.type=gzip
 
+# Actuator endpoints for Prometheus
+management.endpoints.web.exposure.include=health,info,prometheus
+# Prometheus metrics
+management.prometheus.metrics.export.enabled=true
+# Tracing with OTLP to Tempo
+management.tracing.enabled=true
+management.otlp.tracing.endpoint=http://tempo:4318
+# Enable health indicators
+management.endpoint.health.probes.enabled=true
+management.health.livenessstate.enabled=true
+management.health.readinessstate.enabled=true
+
 
 
