--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -38,7 +38,6 @@ spring.kafka.producer.properties.spring.json.trusted.packages=vn.com.iuh.fit.ord
 spring.kafka.listener.ack-mode=record
 spring.kafka.consumer.properties.spring.json.use.type.headers=false
 
-
 # ===============================
 # MySQL Database Configuration
 # ===============================
@@ -73,5 +72,17 @@ logging.level.com.order-service=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.file.name=logs/order-service.log
+
+# Actuator endpoints for Prometheus
+management.endpoints.web.exposure.include=health,info,prometheus
+# Prometheus metrics
+management.prometheus.metrics.export.enabled=true
+# Tracing with OTLP to Tempo
+management.tracing.enabled=true
+management.otlp.tracing.endpoint=http://tempo:4318
+# Enable health indicators
+management.endpoint.health.probes.enabled=true
+management.health.livenessstate.enabled=true
+management.health.readinessstate.enabled=true
 
 
