--- a/payment-service/src/main/resources/application.properties
+++ b/payment-service/src/main/resources/application.properties
@@ -47,3 +47,15 @@ paypal.client-id=AfLQ5Cecwg7yqZg8d-lSEagcNOq5EyMl0Gi5RqzrAwcSmwXdKYmvh2ZV0glrpeS
 paypal.client-secret=EAyDFklnKIctnyYfVjbfx_YSzQqX1J8frHKm584Z00UnVYiwkeQhaVXvT1Eo3mJs2-0KpK2YAznxRvPS
 paypal.mode=sandbox
 paypal.base-url=https://api-m.sandbox.paypal.com
+
+# Actuator endpoints for Prometheus
+management.endpoints.web.exposure.include=health,info,prometheus
+# Prometheus metrics
+management.prometheus.metrics.export.enabled=true
+# Tracing with OTLP to Tempo
+management.tracing.enabled=true
+management.otlp.tracing.endpoint=http://tempo:4318
+# Enable health indicators
+management.endpoint.health.probes.enabled=true
+management.health.livenessstate.enabled=true
+management.health.readinessstate.enabled=true
