--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -33,7 +33,6 @@ minio.access-key=minioadmin
 minio.secret-key=minioadmin
 minio.bucket-name=musicstore
 
-
 # -----------------------------------
 # Logging Configuration
 # -----------------------------------
@@ -45,5 +44,18 @@ logging.level.com.musicstore=INFO
 spring.elasticsearch.uris=http://elasticsearch:9200
 spring.elasticsearch.username=elastic
 spring.elasticsearch.password=elastic
+
+# Actuator endpoints for Prometheus
+management.endpoints.web.exposure.include=health,info,prometheus
+# Prometheus metrics
+management.prometheus.metrics.export.enabled=true
+# Tracing with OTLP to Tempo
+management.tracing.enabled=true
+management.otlp.tracing.endpoint=http://tempo:4318
+# Enable health indicators
+management.endpoint.health.probes.enabled=true
+management.health.livenessstate.enabled=true
+management.health.readinessstate.enabled=true
+
 
 
