--- a/Inventory-Service/src/main/resources/application.properties
+++ b/Inventory-Service/src/main/resources/application.properties
@@ -48,3 +48,15 @@ spring.kafka.consumer.properties.spring.json.type.mapping=ValidateInventoryEvent
 spring.kafka.listener.ack-mode=record
 spring.kafka.consumer.properties.spring.json.use.type.headers=false
 
+# Actuator endpoints for Prometheus
+management.endpoints.web.exposure.include=health,info,prometheus
+# Prometheus metrics
+management.prometheus.metrics.export.enabled=true
+# Tracing with OTLP to Tempo
+management.tracing.enabled=true
+management.otlp.tracing.endpoint=http://tempo:4318
+# Enable health indicators
+management.endpoint.health.probes.enabled=true
+management.health.livenessstate.enabled=true
+management.health.readinessstate.enabled=true
+
