--- a/eureka-service/src/main/resources/application.properties
+++ b/eureka-service/src/main/resources/application.properties
@@ -21,5 +21,15 @@ logging.level.com.netflix.discovery=DEBUG
 spring.cloud.config.enabled=false
 spring.config.import=optional:configserver:
 
+# Prometheus metrics
+management.prometheus.metrics.export.enabled=true
+# Tracing with OTLP to Tempo
+management.tracing.enabled=true
+management.otlp.tracing.endpoint=http://tempo:4318
+# Enable health indicators
+management.endpoint.health.probes.enabled=true
+management.health.livenessstate.enabled=true
+management.health.readinessstate.enabled=true
+
 
 
