--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -38,9 +38,20 @@ spring.mail.password=gehq lpah tgld huhp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-
 # ===============================
 # Logging
 # ===============================
 logging.level.org.springframework=INFO
 logging.level.vn.com.iuh.fit.notification_service=DEBUG
+
+# Actuator endpoints for Prometheus
+management.endpoints.web.exposure.include=health,info,prometheus
+# Prometheus metrics
+management.prometheus.metrics.export.enabled=true
+# Tracing with OTLP to Tempo
+management.tracing.enabled=true
+management.otlp.tracing.endpoint=http://tempo:4318
+# Enable health indicators
+management.endpoint.health.probes.enabled=true
+management.health.livenessstate.enabled=true
+management.health.readinessstate.enabled=true
