--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -149,6 +149,7 @@ services:  # 1. Eureka Service
     depends_on:
       - eureka-service
       - mysql
+      - minio
     restart: on-failure
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/user_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
@@ -156,6 +157,10 @@ services:  # 1. Eureka Service
       SPRING_DATASOURCE_PASSWORD: password
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka-service:8761/eureka
       EUREKA_INSTANCE_HOSTNAME: user-service
+      MINIO_URL: http://minio:9000
+      MINIO_ACCESS_KEY: minioadmin
+      MINIO_SECRET_KEY: minioadmin
+      MINIO_BUCKET_NAME: user-avatars
     networks:
       - microservice-net
 
