--- a/ai-service/requirements.txt
+++ b/ai-service/requirements.txt
@@ -1,7 +1,6 @@
-fastapi
-uvicorn
-grpcio
-grpcio-tools
-transformers
-sentence-transformers
-torch
+fastapi==0.110.0
+uvicorn[standard]==0.27.1
+grpcio==1.62.1
+grpcio-tools==1.62.1
+transformers==4.37.2
+sentence-transformers==2.2.2
