--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -64,6 +64,11 @@ spring.cloud.gateway.routes[8].id=review-service
 spring.cloud.gateway.routes[8].uri=http://review-service:8090
 spring.cloud.gateway.routes[8].predicates[0]=Path=/api/reviews/**
 
+spring.cloud.gateway.routes[9].id=ai-service
+spring.cloud.gateway.routes[9].uri=http://ai-service:8000
+spring.cloud.gateway.routes[9].predicates[0]=Path=/api/ai/**
+
+
 # Redis Rate Limiting Configuration
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
