--- a/Docker-compose.override.yml
+++ b/Docker-compose.override.yml
@@ -1,171 +1,171 @@
-#version: "3.8"
-#
-#services:
-##  # Disable Elasticsearch
-##  elasticsearch:
-##    image: alpine
-##    container_name: dummy-elasticsearch
-##    command: ["sleep", "infinity"]
-##    ports: []
-##    deploy:
-##      resources:
-##        limits:
-##          cpus: "0"
-##          memory: "0M"
-#
-#  # Disable Kibana
-#  kibana:
-#    image: alpine
-#    container_name: dummy-kibana
-#    command: ["sleep", "infinity"]
-#    ports: []
-#    deploy:
-#      resources:
-#        limits:
-#          cpus: "0"
-#          memory: "0M"
-#
-#  # Disable User Service
-#  user-service:
-#    image: alpine
-#    container_name: dummy-user-service
-#    command: ["sleep", "infinity"]
-#    ports: []
-#    deploy:
-#      resources:
-#        limits:
-#          cpus: "0"
-#          memory: "0M"
-#
-#  # Disable Review Service
-#  review-service:
-#    image: alpine
-#    container_name: dummy-review-service
-#    command: ["sleep", "infinity"]
-#    ports: []
-#    deploy:
-#      resources:
-#        limits:
-#          cpus: "0"
-#          memory: "0M"
-#
-#  # Disable Logstash
-#  logstash:
-#    image: alpine
-#    container_name: dummy-logstash
-#    command: ["sleep", "infinity"]
-#    ports: []
-#    deploy:
-#      resources:
-#        limits:
-#          cpus: "0"
-#          memory: "0M"
-#
-#  # Disable Prometheus
-#  prometheus:
-#    image: alpine
-#    container_name: dummy-prometheus
-#    command: ["sleep", "infinity"]
-#    ports: []
-#    deploy:
-#      resources:
-#        limits:
-#          cpus: "0"
-#          memory: "0M"
-#
-#  # Disable Grafana
-#  grafana:
-#    image: alpine
-#    container_name: dummy-grafana
-#    command: ["sleep", "infinity"]
-#    ports: []
-#    deploy:
-#      resources:
-#        limits:
-#          cpus: "0"
-#          memory: "0M"
-#
-#  # Disable Tempo
-#  tempo:
-#    image: alpine
-#    container_name: dummy-tempo
-#    command: ["sleep", "infinity"]
-#    ports: []
-#    deploy:
-#      resources:
-#        limits:
-#          cpus: "0"
-#          memory: "0M"
-#
-#  # Disable Notification Service
-#  notification-service:
-#    image: alpine
-#    container_name: dummy-notification-service
-#    command: ["sleep", "infinity"]
-#    ports: []
-#    deploy:
-#      resources:
-#        limits:
-#          cpus: "0"
-#          memory: "0M"
-#
-#  # Disable Order Service
-#  order-service:
-#    image: alpine
-#    container_name: dummy-order-service
-#    command: ["sleep", "infinity"]
-#    ports: []
-#    deploy:
-#      resources:
-#        limits:
-#          cpus: "0"
-#          memory: "0M"
-#
-#  # Disable Payment Service
-#  payment-service:
-#    image: alpine
-#    container_name: dummy-payment-service
-#    command: ["sleep", "infinity"]
-#    ports: []
-#    deploy:
-#      resources:
-#        limits:
-#          cpus: "0"
-#          memory: "0M"
-#
-#  # Disable Cart Service
-#  cart-service:
-#    image: alpine
-#    container_name: dummy-cart-service
-#    command: ["sleep", "infinity"]
-#    ports: []
-#    deploy:
-#      resources:
-#        limits:
-#          cpus: "0"
-#          memory: "0M"
+version: "3.8"
 
-#  # Disable Inventory Service
-#  inventory-service:
-#    image: alpine
-#    container_name: dummy-inventory-service
-#    command: ["sleep", "infinity"]
-#    ports: []
-#    deploy:
-#      resources:
-#        limits:
-#          cpus: "0"
-#          memory: "0M"
+services:
+  # Disable Elasticsearch
+  elasticsearch:
+    image: alpine
+    container_name: dummy-elasticsearch
+    command: ["sleep", "infinity"]
+    ports: []
+    deploy:
+      resources:
+        limits:
+          cpus: "0"
+          memory: "0M"
 
-#  # Disable ai-service
-#  ai-service:
-#    image: alpine
-#    container_name: dummy-ai-service
-#    command: ["sleep", "infinity"]
-#    ports: []
-#    volumes: []
-#    deploy:
-#      resources:
-#        limits:
-#          cpus: "0"
-#          memory: "0M"
+  # Disable Kibana
+  kibana:
+    image: alpine
+    container_name: dummy-kibana
+    command: ["sleep", "infinity"]
+    ports: []
+    deploy:
+      resources:
+        limits:
+          cpus: "0"
+          memory: "0M"
+
+  # Disable User Service
+  user-service:
+    image: alpine
+    container_name: dummy-user-service
+    command: ["sleep", "infinity"]
+    ports: []
+    deploy:
+      resources:
+        limits:
+          cpus: "0"
+          memory: "0M"
+
+  # Disable Review Service
+  review-service:
+    image: alpine
+    container_name: dummy-review-service
+    command: ["sleep", "infinity"]
+    ports: []
+    deploy:
+      resources:
+        limits:
+          cpus: "0"
+          memory: "0M"
+
+  # Disable Logstash
+  logstash:
+    image: alpine
+    container_name: dummy-logstash
+    command: ["sleep", "infinity"]
+    ports: []
+    deploy:
+      resources:
+        limits:
+          cpus: "0"
+          memory: "0M"
+
+  # Disable Prometheus
+  prometheus:
+    image: alpine
+    container_name: dummy-prometheus
+    command: ["sleep", "infinity"]
+    ports: []
+    deploy:
+      resources:
+        limits:
+          cpus: "0"
+          memory: "0M"
+
+  # Disable Grafana
+  grafana:
+    image: alpine
+    container_name: dummy-grafana
+    command: ["sleep", "infinity"]
+    ports: []
+    deploy:
+      resources:
+        limits:
+          cpus: "0"
+          memory: "0M"
+
+  # Disable Tempo
+  tempo:
+    image: alpine
+    container_name: dummy-tempo
+    command: ["sleep", "infinity"]
+    ports: []
+    deploy:
+      resources:
+        limits:
+          cpus: "0"
+          memory: "0M"
+
+  # Disable Notification Service
+  notification-service:
+    image: alpine
+    container_name: dummy-notification-service
+    command: ["sleep", "infinity"]
+    ports: []
+    deploy:
+      resources:
+        limits:
+          cpus: "0"
+          memory: "0M"
+
+  # Disable Order Service
+  order-service:
+    image: alpine
+    container_name: dummy-order-service
+    command: ["sleep", "infinity"]
+    ports: []
+    deploy:
+      resources:
+        limits:
+          cpus: "0"
+          memory: "0M"
+
+  # Disable Payment Service
+  payment-service:
+    image: alpine
+    container_name: dummy-payment-service
+    command: ["sleep", "infinity"]
+    ports: []
+    deploy:
+      resources:
+        limits:
+          cpus: "0"
+          memory: "0M"
+
+  # Disable Cart Service
+  cart-service:
+    image: alpine
+    container_name: dummy-cart-service
+    command: ["sleep", "infinity"]
+    ports: []
+    deploy:
+      resources:
+        limits:
+          cpus: "0"
+          memory: "0M"
+
+  # Disable Inventory Service
+  inventory-service:
+    image: alpine
+    container_name: dummy-inventory-service
+    command: ["sleep", "infinity"]
+    ports: []
+    deploy:
+      resources:
+        limits:
+          cpus: "0"
+          memory: "0M"
+
+  # Disable ai-service
+  ai-service:
+    image: alpine
+    container_name: dummy-ai-service
+    command: ["sleep", "infinity"]
+    ports: []
+    volumes: []
+    deploy:
+      resources:
+        limits:
+          cpus: "0"
+          memory: "0M"
