--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -57,5 +57,18 @@ management.endpoint.health.probes.enabled=true
 management.health.livenessstate.enabled=true
 management.health.readinessstate.enabled=true
 
+# -----------------------------------
+# Redis Configuration
+# -----------------------------------
+spring.data.redis.host=redis
+spring.data.redis.port=6379
+spring.data.redis.database=1
+spring.data.redis.timeout=60s
+#RateLimiter
+resilience4j.ratelimiter.instances.productLimiter.limit-for-period=5
+resilience4j.ratelimiter.instances.productLimiter.limit-refresh-period=5s
+resilience4j.ratelimiter.instances.productLimiter.timeout-duration=0
+
+
 
 
