--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -35,6 +35,10 @@ spring.cloud.gateway.routes[0].predicates[0]=Path=/api/auth/**
 spring.cloud.gateway.routes[1].id=user-service
 spring.cloud.gateway.routes[1].uri=lb://USER-SERVICE
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/users/**
+spring.cloud.gateway.routes[1].filters[0]=RequestRateLimiter
+spring.cloud.gateway.routes[1].filters[0].args.redis-rate-limiter.replenishRate=5
+spring.cloud.gateway.routes[1].filters[0].args.redis-rate-limiter.burstCapacity=10
+spring.cloud.gateway.routes[1].filters[0].args.key-resolver=#{@ipKeyResolver}
 
 spring.cloud.gateway.routes[2].id=product-service
 spring.cloud.gateway.routes[2].uri=lb://PRODUCT-SERVICE
@@ -70,7 +74,7 @@ spring.cloud.gateway.routes[9].predicates[0]=Path=/api/ai/**
 
 
 # Redis Rate Limiting Configuration
-spring.data.redis.host=localhost
+spring.data.redis.host=redis
 spring.data.redis.port=6379
 
 # Actuator endpoints for Prometheus
