--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -129,6 +129,10 @@
 			<groupId>io.micrometer</groupId>
 			<artifactId>micrometer-tracing-bridge-brave</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.github.resilience4j</groupId>
+			<artifactId>resilience4j-spring-boot3</artifactId>
+		</dependency>
 
 		<!-- JSON Logging for ELK -->
 		<dependency>
