--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -57,6 +57,19 @@ management.otlp.tracing.endpoint=http://tempo:4318
 management.endpoint.health.probes.enabled=true
 management.health.livenessstate.enabled=true
 management.health.readinessstate.enabled=true
+# RateLimiter
+resilience4j.ratelimiter.instances.authLimiter.limit-for-period=5
+resilience4j.ratelimiter.instances.authLimiter.limit-refresh-period=60s
+resilience4j.ratelimiter.instances.authLimiter.timeout-duration=0
+resilience4j.ratelimiter.aspect.enabled=false
+resilience4j.feign.rateLimiter.enabled=true
+resilience4j.feign.rateLimiter.clientName=user-service
+
+#Retry
+feign.client.config.user-service.retryer=feign.Retryer.Default
+feign.client.config.user-service.loggerLevel=FULL
+logging.level.feign=DEBUG
+logging.level.vn.com.iuh.fit.AuthService.client=DEBUG
 
 
 
