--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -58,10 +58,10 @@ management.endpoint.health.probes.enabled=true
 management.health.livenessstate.enabled=true
 management.health.readinessstate.enabled=true
 # RateLimiter
-resilience4j.ratelimiter.instances.authLimiter.limit-for-period=5
-resilience4j.ratelimiter.instances.authLimiter.limit-refresh-period=60s
-resilience4j.ratelimiter.instances.authLimiter.timeout-duration=0
-resilience4j.ratelimiter.aspect.enabled=false
+resilience4j.ratelimiter.instances.authRateLimiter.limit-for-period=5
+resilience4j.ratelimiter.instances.authRateLimiter.limit-refresh-period=60s
+resilience4j.ratelimiter.instances.authRateLimiter.timeout-duration=0
+resilience4j.ratelimiter.aspect.enabled=true
 resilience4j.feign.rateLimiter.enabled=true
 resilience4j.feign.rateLimiter.clientName=user-service
 
