--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -58,12 +58,14 @@ management.endpoint.health.probes.enabled=true
 management.health.livenessstate.enabled=true
 management.health.readinessstate.enabled=true
 # RateLimiter
-resilience4j.ratelimiter.instances.authRateLimiter.limit-for-period=5
-resilience4j.ratelimiter.instances.authRateLimiter.limit-refresh-period=60s
-resilience4j.ratelimiter.instances.authRateLimiter.timeout-duration=0
+resilience4j.ratelimiter.instances.forgotPasswordRateLimiter.limit-for-period=5
+resilience4j.ratelimiter.instances.forgotPasswordRateLimiter.limit-refresh-period=60s
+resilience4j.ratelimiter.instances.forgotPasswordRateLimiter.timeout-duration=0
 resilience4j.ratelimiter.aspect.enabled=true
 resilience4j.feign.rateLimiter.enabled=true
 resilience4j.feign.rateLimiter.clientName=user-service
+logging.level.io.github.resilience4j.ratelimiter=DEBUG
+logging.level.io.github.resilience4j.core.RateLimiter=TRACE
 
 #Retry
 feign.client.config.user-service.retryer=feign.Retryer.Default
