--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -32,13 +32,15 @@ spring.cloud.gateway.routes[0].id=auth-service
 spring.cloud.gateway.routes[0].uri=lb://AUTH-SERVICE
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/auth/**
 
+#spring.cloud.gateway.routes[1].id=user-service
+#spring.cloud.gateway.routes[1].uri=lb://USER-SERVICE
+#spring.cloud.gateway.routes[1].predicates[0]=Path=/api/users/**
+
+#  user-service ----------
 spring.cloud.gateway.routes[1].id=user-service
 spring.cloud.gateway.routes[1].uri=lb://USER-SERVICE
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/users/**
-spring.cloud.gateway.routes[1].filters[0]=RequestRateLimiter
-spring.cloud.gateway.routes[1].filters[0].args.redis-rate-limiter.replenishRate=5
-spring.cloud.gateway.routes[1].filters[0].args.redis-rate-limiter.burstCapacity=10
-spring.cloud.gateway.routes[1].filters[0].args.key-resolver=#{@ipKeyResolver}
+spring.cloud.gateway.routes[1].filters[0]=RequestRateLimiter=key-resolver=#{@ipKeyResolver},redis-rate-limiter.replenishRate=1,redis-rate-limiter.burstCapacity=10,redis-rate-limiter.requestedTokens=1
 
 spring.cloud.gateway.routes[2].id=product-service
 spring.cloud.gateway.routes[2].uri=lb://PRODUCT-SERVICE
